:sparkles: Add plan api
